<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:padding="15dp"
        android:background="#8000D9"
        android:letterSpacing="0.05"
        android:text="GOPETALK"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAppearance="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- TextInputLayout para Correo -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Correo Electrónico"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/white"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColorHint="#999999" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextInputLayout para Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Contraseña"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/white"
            android:padding="12dp"
            android:textAlignment="center"
            android:textColorHint="#999999" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Entrar"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="#8000D9"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister" />

    <!-- Botón Registrarse -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:backgroundTint="#8000D9"
        app:layout_constraintTop_toTopOf="@id/btnEnter"
        app:layout_constraintStart_toEndOf="@id/btnEnter"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>