<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvAppTitle"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:padding="15dp"
                    android:background="#8000D9"
                    android:letterSpacing="0.05"
                    android:text="GopeTalk"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Registro"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tvAppTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Por favor llene todos los campos, al terminar da click en el botón (REGISTRARSE) y revise por favor su correo para validarlo"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tvLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="Ingrese su nombre"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="Ingrese su apellido"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etEmailAddress"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="Ingrese su E-mail"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etLastName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="Ingrese su contraseña"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="Confirme su contraseña"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/etPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#8000D9"
                    android:text="Registrarse"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/btnBackToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="#8000D9"
                    android:text="Volver"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/btnRegister"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
